tests/extensions/forLoops/syntaxErr/forDoErr.wacc
# do typo

# Output:
# syntax_error

# Exit:
# 100

begin
  for (int i = 0; i < 5; i++) doo
    skip
  done
end